tests/integration/tests/settings/ui/fail/embedded_node_as_root_fragment.stderr
error[E0277]: the trait bound `EmbeddedConfig: SettingsFragment` is not satisfied
 --> tests/settings/ui/fail/embedded_node_as_root_fragment.rs:8:1
  |
8 | #[settings(embedded: EmbeddedConfig)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `SettingsFragment` is not implemented for `EmbeddedConfig`
 --> tests/settings/ui/fail/embedded_node_as_root_fragment.rs:3:1
  |
3 | #[settings(fragment = true)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = help: the following other types implement trait `SettingsFragment`:
            CacheSettings
            ContactSettings
            CoreSettings
            CorsSettings
            EmailSettings
            I18nSettings
            LoggingSettings
            MediaSettings
          and $N others
note: required by a bound in `HasSettings`
 --> $WORKSPACE/crates/reinhardt-conf/src/settings/fragment.rs
  |
  | pub trait HasSettings<F: SettingsFragment> {
  |                          ^^^^^^^^^^^^^^^^ required by this bound in `HasSettings`
  = note: this error originates in the attribute macro `settings` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `EmbeddedConfig: SettingsFragment` is not satisfied
 --> tests/settings/ui/fail/embedded_node_as_root_fragment.rs:8:1
  |
8 | #[settings(embedded: EmbeddedConfig)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
  |
help: the trait `SettingsFragment` is not implemented for `EmbeddedConfig`
 --> tests/settings/ui/fail/embedded_node_as_root_fragment.rs:3:1
  |
3 | #[settings(fragment = true)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  = help: the following other types implement trait `SettingsFragment`:
            CacheSettings
            ContactSettings
            CoreSettings
            CorsSettings
            EmailSettings
            I18nSettings
            LoggingSettings
            MediaSettings
          and $N others
  = note: this error originates in the attribute macro `settings` (in Nightly builds, run with -Z macro-backtrace for more info)
